Finish splitting off ssh config into multiple files

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,47 +1,9 @@
 Include config.d/device-specific
 
+Include config.d/homelab
+
 Host github.com
   IdentityFile ~/.ssh/github-auth
-
-Host homelab-dev
-  HostName dev.int-net.saphnet.xyz
-  User ubuntu-dev-user
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-haos
-  HostName haos.int-net.saphnet.xyz
-  User hassio
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-docker-main-pve1
-  HostName docker-main.pve1.int-net.saphnet.xyz
-  User docker-vm-user
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-docker-main-pve2
-  HostName docker-main.pve2.int-net.saphnet.xyz
-  User docker-vm-user
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-docker-main-pve3
-  HostName docker-main.pve3.int-net.saphnet.xyz
-  User docker-vm-user
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-nginx
-  HostName nginx.int-net.saphnet.xyz
-  User docker-vm-user
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-portainer
-  HostName portainer.int-net.saphnet.xyz
-  User docker-vm-user
-  IdentityFile ~/.ssh/homelab
-
-Host homelab-vpn
-  HostName vpn.int-net.saphnet.xyz
-  User ubuntu-vpn-user
-  IdentityFile ~/.ssh/homelab
 
 Host uci-openlab
   HostName openlab.ics.uci.edu
