Add UCI gitlab SSH entry

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -9,3 +9,7 @@ Host uci-openlab
   HostName openlab.ics.uci.edu
   User naguerr2
   IdentityFile ~/.ssh/uci-openlab
+
+Host gitlab-cs142a-s25.ics.uci.edu
+  IdentityFile ~/.ssh/uci-gitlab
+
