Update to various themes and programs in dotfiles

--- a/dotfiles/.config/flameshot/flameshot.ini
+++ b/dotfiles/.config/flameshot/flameshot.ini
@@ -1,5 +1,6 @@
 [General]
 contrastOpacity=188
+disabledTrayIcon=true
 saveAsFileExtension=png
 showSelectionGeometryHideTime=3000
 showStartupLaunchMessage=false
