--- a/dotfiles/.config/xsettingsd/xsettingsd.conf
+++ b/dotfiles/.config/xsettingsd/xsettingsd.conf
@@ -12,6 +12,6 @@ Gtk/CursorThemeSize 24
 Gtk/CursorThemeName "breeze_cursors"
 Net/SoundThemeName "ocean"
 Net/IconThemeName "breeze-dark"
-Gtk/FontName "Fira Sans,  10"
-Net/ThemeName "Breeze-Dark"
+Gtk/FontName "Open Sans,  10"
+Net/ThemeName "adw-gtk3-dark"
 
