Updating new settings, also adjusting to Tailscale domains

--- a/dotfiles/.config/xsettingsd/xsettingsd.conf
+++ b/dotfiles/.config/xsettingsd/xsettingsd.conf
@@ -13,5 +13,5 @@ Gtk/CursorThemeName "breeze_cursors"
 Net/SoundThemeName "ocean"
 Net/IconThemeName "breeze-dark"
 Gtk/FontName "Open Sans,  10"
-Net/ThemeName "adw-gtk3-dark"
+Net/ThemeName "adw-gtk3"
 
