Another massive overhaul to dotfiles

--- a/dotfiles/.ssh/config
+++ b/dotfiles/.ssh/config
@@ -1,6 +1,4 @@
-Include config.d/device-specific
-
-Include config.d/homelab
+Include config.d/*
 
 Host github.com
   IdentityFile ~/.ssh/github-auth
