chore: Update dotfiles, aconfmgr setup to reflect latest state
Add Flatpak section, with instructions

Update main README.md with some extra information about reinstalling and dotfiles

--- a/aconfmgr/files/etc/cups/printers.conf
+++ b/aconfmgr/files/etc/cups/printers.conf
@@ -10,7 +10,7 @@ Location 192.168.1.180
 MakeModel Canon MF440 Series UFR II
 DeviceURI socket://192.168.1.180:9100
 State Idle
-StateTime 1759532186
+StateTime 1760561572
 ConfigTime 1751846235
 Type 5332
 Accepting Yes
@@ -21,11 +21,11 @@ PageLimit 0
 KLimit 0
 OpPolicy default
 ErrorPolicy stop-printer
-Attribute marker-colors none
+Attribute marker-colors \#000000
 Attribute marker-levels -1
 Attribute marker-names 
 Attribute marker-types unknown
-Attribute marker-change-time 1759532186
+Attribute marker-change-time 1760561568
 </Printer>
 <DefaultPrinter HLL2395DW>
 PrinterId 1
