--- a/dotfiles/.config/kwinoutputconfig.json
+++ b/dotfiles/.config/kwinoutputconfig.json
@@ -105,6 +105,21 @@
                         "replicationSource": ""
                     }
                 ]
+            },
+            {
+                "lidClosed": false,
+                "outputs": [
+                    {
+                        "enabled": true,
+                        "outputIndex": 0,
+                        "position": {
+                            "x": 0,
+                            "y": 0
+                        },
+                        "priority": 0,
+                        "replicationSource": ""
+                    }
+                ]
             }
         ],
         "name": "setups"
